# compare-regions-jp

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
src/compare_regions_jp/: __init__.py  cli.py
src/compare_regions_jp/config/: __init__.py  settings.py
src/compare_regions_jp/core/: region.py
src/compare_regions_jp/data/: __init__.py  base.py  railway.py
tests/: test_cli.py
tests/config/: __init__.py  test_settings.py
tests/data/: __init__.py  test_base.py  test_railway.py
